# sensen_music_scoring

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  readme.md  settings.gradle.kts
.github/workflows/: ci.yml
bindings/android/: build.gradle.kts  consumer-rules.pro
bindings/android/src/main/cpp/: CMakeLists.txt  jni.cpp
bindings/android/src/main/kotlin/com/sensen/singscoring/: SingScoringSession.kt
bindings/ios/: CMakeLists.txt  Info.plist.in  README.md  SSCSession.mm
bindings/ios/include/SingScoring/: SSCSession.h  SingScoring.h
core/: CMakeLists.txt
core/include/: singscoring.h  singscoring_version.h
core/src/: json_parser.cpp  json_parser.h  lrc_parser.cpp  lrc_parser.h  midi_parser.cpp  midi_parser.h  mp3_decoder.cpp  mp3_decoder.h  pitch_detector.cpp  pitch_detector.h  resampler.cpp  resampler.h  scorer.cpp  scorer.h  session.cpp  song.cpp  song.h  types.h  version.cpp  zip_loader.cpp  zip_loader.h
demo-android/: build.gradle.kts
demo-android/src/main/: AndroidManifest.xml
demo-android/src/main/kotlin/com/sensen/singscoring/demo/: AudioRecorder.kt  LrcParser.kt  LyricsScrollView.kt  MainActivity.kt  SongAssets.kt  SongCatalog.kt  SongStaging.kt
demo-android/src/main/kotlin/com/sensen/singscoring/demo/ui/: Palette.kt  ScoreRingView.kt  SongListAdapter.kt
demo-android/src/main/res/values/: strings.xml  themes.xml
demo-android/src/main/res/xml/: network_security_config.xml
demo-ios/: project.yml
demo-ios/SingScoringDemo/: AppState.swift  AudioRecorder.swift  ContentView.swift  CountdownView.swift  LrcParser.swift  LyricsScrollView.swift  Palette.swift  PreviewView.swift  ScoreRingView.swift  SingScoringDemoApp.swift  SongCatalog.swift  SongStaging.swift
docs/: ABI.md  ANDROID_DISTRIBUTION.zh-CN.md  ANDROID_INTEGRATION.md  ANDROID_INTEGRATION.zh-CN.md  IOS_INTEGRATION.zh-CN.md
docs/superpowers/plans/: 2026-04-22-multi-dimension-scoring.md  2026-04-22-oneshot-pcm-scoring.md  2026-04-22-preview-playback.md  2026-04-23-api-song-catalog.md  2026-04-23-demo-30s-cap-and-countdown.md  2026-04-23-phrase-alignment-and-pcm-clipping.md  2026-04-23-pitch-variance-tightening.md  2026-04-23-scoring-fixes.md  2026-04-23-ui-score-remap.md  2026-04-24-demo-spotify-refresh.md
docs/superpowers/specs/: 2026-04-22-oneshot-pcm-scoring-design.md  2026-04-22-preview-playback-design.md  2026-04-23-api-song-catalog-design.md  2026-04-23-demo-30s-cap-and-countdown-design.md  2026-04-23-phrase-alignment-and-pcm-clipping-design.md  2026-04-23-pitch-variance-tightening-design.md  2026-04-23-return-to-list-button-design.md  2026-04-23-ui-score-remap-design.md  2026-04-24-demo-spotify-refresh-design.md
gradle/: libs.versions.toml
scripts/: build-ios-xcframework.sh  env.sh
tests/: CMakeLists.txt  fixtures.h  test_json_parser.cpp  test_lrc_parser.cpp  test_midi_parser.cpp  test_mp3_decoder.cpp  test_pitch_detector.cpp  test_resampler.cpp  test_scorer.cpp  test_session.cpp  test_session_oneshot.cpp  test_session_scoring.cpp  test_song_integration.cpp  test_version.cpp  test_zip_loader.cpp
